--- a/test.ipynb
+++ b/test.ipynb
@@ -8,9 +8,9 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.0218, -0.0218],\n",
-       "        [-0.0032, -0.0096],\n",
-       "        [-0.0374, -0.0374]])"
+       "tensor([[ 0.0154,  0.0154],\n",
+       "        [ 0.0024,  0.0072],\n",
+       "        [-0.0234, -0.0234]])"
       ]
      },
      "execution_count": 1,
@@ -31,9 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CRITICAL:root:This is a test. \n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "\n",
@@ -44,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/greenhandzpx/CodeField/codePy/7th_code/image/train\n"
+      "/home/greenhandzpx/CodeField/py_code/2017_ETEOIC/image/train\n"
      ]
     }
    ],
@@ -63,16 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,46 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "\n",
-    "torch.cuda"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2 as cv\n",
-    "import torchvision.transforms as transforms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(256, 256, 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "img = cv.imread('image/train/0.png')\n",
-    "print(img.shape)"
+    "import torchvision.transforms as transforms\n",
+    "from PIL import Image   "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = Image.open('image/test/kodim03.png').convert('RGB')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +124,8 @@
     }
    ],
    "source": [
+    "transf = transforms.Resize((256, 256))\n",
+    "img = transf(img)\n",
     "transf = transforms.ToTensor()\n",
     "img_tensor = transf(img)  # tensor数据格式是torch(C,H,W)\n",
     "print(img_tensor.size())"
@@ -153,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -162,19 +152,19 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "net = Network(device='cpu')\n",
-    "net.load_state_dict(torch.load('model_param/model32'))"
+    "net.load_state_dict(torch.load('model_param/model1024', map_location=torch.device('cpu')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +173,7 @@
        "torch.Size([1, 3, 256, 256])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +194,7 @@
     "toPIL = transforms.ToPILImage()\n",
     "for i in range(com_tensor.shape[0]):\n",
     "    img = toPIL(com_tensor[i].clamp(0., 1.))\n",
-    "    img.save(os.path.join(os.getcwd(), 'image', 'test_results32',\n",
+    "    img.save(os.path.join(os.getcwd(), 'image', 'test_results1024',\n",
     "                            'test_param' + '.bmp'))"
    ]
   },
@@ -235,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
