--- a/test.ipynb
+++ b/test.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0154,  0.0154],\n",
-       "        [ 0.0024,  0.0072],\n",
-       "        [-0.0234, -0.0234]])"
+       "tensor([[ 0.0162,  0.0162],\n",
+       "        [-0.0065, -0.0195],\n",
+       "        [-0.0330, -0.0330]])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,16 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = Image.open('image/test/kodim03.png').convert('RGB')"
+    "#img = Image.open('image/test/kodim03.png').convert('RGB')\n",
+    "img = Image.open('image/train/0.png').convert('RGB')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -133,69 +134,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[[ 0.,  0.,  0.,  ...,  1.,  0.,  0.],\n",
+      "          [ 1.,  0.,  0.,  ...,  0.,  1.,  0.],\n",
+      "          [ 1.,  2.,  0.,  ...,  0.,  0.,  1.],\n",
+      "          ...,\n",
+      "          [ 0., -1.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [-1.,  0.,  1.,  ...,  1.,  0.,  1.],\n",
+      "          [ 0.,  0.,  1.,  ...,  0.,  0.,  0.]],\n",
+      "\n",
+      "         [[-1., -1.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          ...,\n",
+      "          [ 0., -1.,  1.,  ...,  0.,  0., -1.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0., -1.,  0.],\n",
+      "          [ 0.,  1.,  0.,  ..., -1.,  0.,  0.]],\n",
+      "\n",
+      "         [[ 0.,  1., -1.,  ..., -1.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [-1.,  0.,  0.,  ...,  1.,  1.,  1.],\n",
+      "          ...,\n",
+      "          [-1.,  1.,  1.,  ..., -1., -1.,  1.],\n",
+      "          [-1.,  1.,  1.,  ..., -1., -1.,  2.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0., -1.,  1.]],\n",
+      "\n",
+      "         ...,\n",
+      "\n",
+      "         [[ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          ...,\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.]],\n",
+      "\n",
+      "         [[ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          ...,\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.]],\n",
+      "\n",
+      "         [[ 0.,  0.,  1.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0., -1.,  0.],\n",
+      "          ...,\n",
+      "          [-1., -1.,  0.,  ...,  0.,  0.,  1.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.],\n",
+      "          [ 0.,  0.,  0.,  ...,  0.,  0.,  0.]]]], grad_fn=<PermuteBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "from model import Network\n",
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "import torch\n",
+    "\n",
     "net = Network(device='cpu')\n",
-    "net.load_state_dict(torch.load('model_param/model1024', map_location=torch.device('cpu')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 3, 256, 256])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "net.load_state_dict(torch.load('model_param/model1024', map_location=torch.device('cpu')))\n",
+    "net.eval()\n",
+    "\n",
     "img_tensor = img_tensor.reshape([1, 3, 256, 256])\n",
-    "com_tensor, _ = net(img_tensor)\n",
-    "com_tensor.shape"
+    "com_tensor, _, y = net(img_tensor)\n",
+    "print(y)\n",
+    "#print(y_hat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "toPIL = transforms.ToPILImage()\n",
-    "for i in range(com_tensor.shape[0]):\n",
-    "    img = toPIL(com_tensor[i].clamp(0., 1.))\n",
-    "    img.save(os.path.join(os.getcwd(), 'image', 'test_results1024',\n",
-    "                            'test_param' + '.bmp'))"
+    "# import os\n",
+    "# toPIL = transforms.ToPILImage()\n",
+    "# for i in range(com_tensor.shape[0]):\n",
+    "#     img = toPIL(com_tensor[i].clamp(0., 1.))\n",
+    "#     img.save(os.path.join(os.getcwd(), 'image', 'test_results1024',\n",
+    "#                             'test_param' + '.bmp'))"
    ]
   },
   {
